<resources>
    <string name="about_app_name" translatable="false">Another Note</string>
    <string name="no_data" translatable="false">No data</string>
    <string name="note_no_data">Notes you add appear here.</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="menu_main_search">Search</string>
    <string name="menu_main_sort_by">Sort by</string>
    <string name="menu_main_delete_all">Delete all</string>
    <string name="menu_note_save">Save</string>
    <string name="menu_note_update">Update</string>
    <string name="menu_note_delete_forever">Delete forever</string>
    <string name="menu_tell_friends">Tell Friends</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_trash">Trash</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_default">System default</string>
    <string name="settings_theme_choose">Choose a theme</string>
    <string name="settings_theme_selected">Theme selected</string>
    <string name="settings_theme">Theme</string>
    <string name="about_app_version">Version 1.0.1</string>
    <string name="about_app_copyright" translatable="false">© 2020 Anibal Ventura</string>
    <string name="tell_friends">Download now this amazing note taking app!\n\n
        https://play.google.com/store/apps/details?id=com.anibalventura.anothernote</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_main_sort_title">Title</string>
    <string name="menu_note_restore">Restore</string>
    <string name="menu_note_delete">Delete</string>
    <string name="menu_note_archive">Archive</string>
    <string name="archive_no_notes">Your archived notes appear here.</string>
    <string name="trash_no_notes">No notes in trash.</string>
    <string name="menu_main_change_view">Change view</string>
    <string name="snackbar_undo">Undo</string>
    <string name="dialog_delete_all">Delete all</string>
    <string name="dialog_delete_confirmation">Are you sure? This is permanently.</string>
    <string name="dialog_confirmation">Yes</string>
    <string name="dialog_negative" translatable="false">No</string>
    <string name="delete_all_successful">Successfully deleted everything.</string>
    <string name="update_successful">Successfully updated.</string>
    <string name="dialog_delete_forever">Delete forever</string>
    <string name="successfully_deleted_forever">Successfully deleted forever.</string>
    <string name="menu_note_unarchive">Unarchive</string>
    <string name="menu_main_empty_trash">Empty trash</string>
    <string name="dialog_empty_trash">Empty trash</string>
    <string name="empty_trash_successful">Successful empty trash.</string>
    <string name="snackbar_archive">Note archived.</string>
    <string name="snackbar_trash">Note move to trash.</string>
    <string name="snackbar_unarchive">Note unarchived.</string>
    <string name="snackbar_note">Moved to notes.</string>
    <string name="snackbar_note_edit">Can\'t edit in trash.</string>
    <string name="snackbar_restore">Restore</string>
    <string name="menu_note_share">Share</string>
    <string name="menu_note_color">Change color</string>
    <string name="dialog_choose_color">Choose color</string>
    <string name="dialog_select">Select</string>
    <string name="menu_overflow">Overflow Menu</string>
    <string name="menu_main_sort_creation">Creation</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_v100_title" translatable="false">v 1.0.0</string>
    <string name="about_changelog_v100_content">- First release.</string>
    <string name="dialog_discard">Discard?</string>
    <string name="dialog_discard_confirmation">Are you sure? Your changes won\'t be save.</string>
    <string name="dialog_discard_successful">Changes discarded</string>
    <string name="menu_main_sort_color" translatable="false">Color</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="about_changelog_v101_title" translatable="false">v 1.0.1</string>
    <string name="about_changelog_v101_content">- Bug fixes and optimizations.</string>
</resources>