<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/noteFragment"
            android:icon="@drawable/ic_note"
            android:title="@string/menu_notes" />

        <item
            android:id="@+id/archiveFragment"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_archive" />

        <item
            android:id="@+id/trashFragment"
            android:icon="@drawable/ic_trash"
            android:title="@string/menu_trash" />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/shareApp"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/settingsActivity"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>