<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_search"
        android:enabled="false"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_main_search"
        android:visible="false"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_list"
        android:enabled="false"
        android:icon="@drawable/ic_view_list"
        android:title="@string/menu_main_change_view"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_grid"
        android:enabled="false"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/menu_main_change_view"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/ic_menu"
        android:title="@string/overflow_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_main_sort_by"
                android:enabled="false"
                android:icon="@drawable/ic_sort"
                android:title="@string/menu_main_sort_by"
                android:visible="false"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/menu_main_sort_title"
                        android:enabled="false"
                        android:icon="@drawable/ic_sort_title"
                        android:title="@string/menu_main_sort_title"
                        android:visible="false" />
                    <item
                        android:id="@+id/menu_main_sort_creation"
                        android:enabled="false"
                        android:icon="@drawable/ic_sort_creation"
                        android:title="@string/menu_main_sort_creation"
                        android:visible="false" />
                </menu>
            </item>

            <item
                android:id="@+id/menu_main_delete_all"
                android:enabled="false"
                android:icon="@drawable/ic_delete_forever"
                android:title="@string/menu_main_delete_all"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_main_empty_trash"
                android:enabled="false"
                android:icon="@drawable/ic_delete_forever"
                android:title="@string/menu_main_empty_trash"
                android:visible="false"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>