<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/noteFragment">

    <fragment
        android:id="@+id/noteFragment"
        android:name="com.anibalventura.anothernote.ui.note.NoteFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment"
            app:enterAnim="@anim/animation_from_right"
            app:exitAnim="@anim/animation_to_left"
            app:popEnterAnim="@anim/animation_from_left"
            app:popExitAnim="@anim/animation_to_right" />
        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment"
            app:enterAnim="@anim/animation_from_left"
            app:exitAnim="@anim/animation_to_right"
            app:popEnterAnim="@anim/animation_from_right"
            app:popExitAnim="@anim/animation_to_left" />
        <action
            android:id="@+id/action_listFragment_to_aboutFragment2"
            app:destination="@id/aboutFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_noteFragment_to_trashFragment"
            app:destination="@id/trashFragment" />
        <action
            android:id="@+id/action_noteFragment_to_archiveFragment"
            app:destination="@id/archiveFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.anibalventura.anothernote.ui.note.NoteAddFragment"
        tools:layout="@layout/fragment_note_add">
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/noteFragment"
            app:enterAnim="@anim/animation_from_left"
            app:exitAnim="@anim/animation_to_right"
            app:popUpTo="@id/noteFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.anibalventura.anothernote.ui.note.NoteUpdateFragment"
        tools:layout="@layout/fragment_note_update">
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/noteFragment"
            app:enterAnim="@anim/animation_from_right"
            app:exitAnim="@anim/animation_to_left"
            app:popUpTo="@id/noteFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="currentItem"
            app:argType="com.anibalventura.anothernote.data.models.NoteData" />
    </fragment>
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.anibalventura.anothernote.ui.settings.SettingsActivity"
        tools:layout="@layout/activity_settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.anibalventura.anothernote.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_aboutFragment_to_noteFragment"
            app:destination="@id/noteFragment"
            app:popUpTo="@id/noteFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shareAppFragment"
        android:name="com.anibalventura.anothernote.ui.shareapp.ShareAppFragment"
        android:label="ShareAppFragment"
        tools:layout="@layout/fragment_share_app">
        <action
            android:id="@+id/action_shareAppFragment_to_listFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.anibalventura.anothernote.ui.trash.TrashFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_trash">
        <action
            android:id="@+id/action_trashFragment_to_viewTrashFragment"
            app:destination="@id/viewTrashFragment" />
        <action
            android:id="@+id/action_trashFragment_to_noteFragment2"
            app:destination="@id/noteFragment"
            app:popUpTo="@id/noteFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.anibalventura.anothernote.ui.archive.ArchiveFragment"
        android:label="@string/menu_archive"
        tools:layout="@layout/fragment_archive">
        <action
            android:id="@+id/action_archiveFragment_to_updateArchiveFragment"
            app:destination="@id/archiveUpdateFragment" />
        <action
            android:id="@+id/action_archiveFragment_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewTrashFragment"
        android:name="com.anibalventura.anothernote.ui.trash.TrashLookFragment"
        tools:layout="@layout/fragment_trash_look">
        <argument
            android:name="currentItem"
            app:argType="com.anibalventura.anothernote.data.models.TrashData" />
        <action
            android:id="@+id/action_viewTrashFragment_to_trashFragment"
            app:destination="@id/trashFragment"
            app:popUpTo="@id/trashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/archiveUpdateFragment"
        android:name="com.anibalventura.anothernote.ui.archive.ArchiveUpdateFragment"
        tools:layout="@layout/fragment_archive_update">
        <action
            android:id="@+id/action_updateArchiveFragment_to_archiveFragment"
            app:destination="@id/archiveFragment"
            app:popUpTo="@id/archiveFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="currentItem"
            app:argType="com.anibalventura.anothernote.data.models.ArchiveData" />
    </fragment>
</navigation>